--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "antd-table-columndragsort",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "ant-design的Table组件列拖动排序",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "babel": "babel -d lib/ src/"
   },
   "keywords": [
     "antd-table"
@@ -14,5 +15,17 @@
   "dependencies": {
     "react-dnd": "^7.0.2",
     "react-dnd-html5-backend": "^7.0.2"
-  }
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zhouran19880120/antd-table-columndragsort.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zhouran19880120/antd-table-columndragsort/issues"
+  },
+  "homepage": "https://github.com/zhouran19880120/antd-table-columndragsort#readme"
 }
