--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "antd-table-columndragsort",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "ant-design的Table组件列拖动排序",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,10 @@
   },
   "devDependencies": {
     "babel": "^6.23.0",
-    "babel-cli": "^6.26.0"
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1"
   },
   "repository": {
     "type": "git",
